8074839: Resolve disabled warnings for libunpack and the unpack200 binary

Reviewed-by: dholmes, ksrini